kubernetes/pterodactyl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-mariadb
  namespace: pterodactyl
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: pterodactyl-mariadb
    app.kubernetes.io/part-of: pterodactyl
spec:
  selector:
    app.kubernetes.io/name: pterodactyl-mariadb
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-panel
  namespace: pterodactyl
  labels:
    app.kubernetes.io/name: pterodactyl-panel
    app.kubernetes.io/part-of: pterodactyl
spec:
  selector:
    app.kubernetes.io/name: pterodactyl-panel
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-redis
  namespace: pterodactyl
  labels:
    app.kubernetes.io/name: pterodactyl-redis
    app.kubernetes.io/part-of: pterodactyl
spec:
  selector:
    app.kubernetes.io/name: pterodactyl-redis
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
